syntax = "proto3";

option go_package = ".;service";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

message CreateUserRequest {
   User user = 1;
}

message CreateUserResponse {
    bool success = 1;
    string message = 2;
    User user = 3;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    bool success = 1;
    string message = 2;
    User user = 3;
}
